adapt jenkins